--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/newserial?useSSL=false&useUnic
 spring.datasource.username=root
 
 # DB password
-spring.datasource.password=0000
+spring.datasource.password=991228
 
 # true ??? JPA ??? ?? ??
 spring.jpa.show-sql=true
@@ -21,3 +21,6 @@ spring.jpa.properties.hibernate.format_sql=true
 
 
 logging.level.org.springframework.web.filter=debug
+
+#OpenAPI
+api-key.chat-gpt=sk-****
