feat(security): 스프링 시큐리티 설정, payload 작성

--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/newserial?useSSL=false&useUnic
 spring.datasource.username=root
 
 # DB password
-spring.datasource.password=991228
+spring.datasource.password=0000
 
 # true ??? JPA ??? ?? ??
 spring.jpa.show-sql=true
@@ -24,3 +24,8 @@ logging.level.org.springframework.web.filter=debug
 
 #OpenAPI
 api-key.chat-gpt=sk-****
+
+#App Properties
+jwtCookieName=newserial
+jwtSecret=newserialSecretKey
+jwtExpirationMs=86400000
