--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/newserial?useSSL=false&useUnic
 spring.datasource.username=root
 
 # DB password
-spring.datasource.password=0000
+spring.datasource.password=991228
 
 # true ??? JPA ??? ?? ??
 spring.jpa.show-sql=true
@@ -35,5 +35,5 @@ jwtExpirationMsRT=1209600000
 spring.data.redis.database=0
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
-spring.data.redis.password=newSerialRedisPassword1234
+spring.data.redis.password=""
 spring.data.redis.timeout=60000
