feat: 회원가입 시 이메일 인증 및 인증 번호 확인 기능 추가 회원가입 시 이메일 인증을 하는 기능. 이메일로 받은 인증 번호를 확인하는 기능.

--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -37,3 +37,12 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=""
 spring.data.redis.timeout=60000
+
+#mail
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=newserial1130@gmail.com
+spring.mail.password=odbrkldomtxeqbma
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.timeout=5000
+spring.mail.properties.mail.smtp.starttls.enable=true
