--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/newserial?useSSL=false&useUnic
 spring.datasource.username=root
 
 # DB password
-spring.datasource.password=991228
+spring.datasource.password=0000
 
 # true ??? JPA ??? ?? ??
 spring.jpa.show-sql=true
@@ -37,3 +37,20 @@ spring.data.redis.host=localhost
 spring.data.redis.port=6379
 spring.data.redis.password=""
 spring.data.redis.timeout=60000
+
+
+#OAuth2 Naver social login
+spring.security.oauth2.client.registration.naver.client-id=j02Z85kWqF90tfoKA6ba
+spring.security.oauth2.client.registration.naver.client-secret=LvqAQjdQIx
+spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.naver.scope=id,email
+spring.security.oauth2.client.registration.naver.client-name=Naver
+# naver: client_secret_basic(default)
+spring.security.oauth2.client.registration.naver.client-authentication-method=client_secret_basic
+
+
+spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.user-name-attribute=response
