--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web.filter=debug
 
 #OpenAPI
-api-key.chat-gpt=sk-****
+api-key.chat-gpt=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
 
 #App Properties
 jwtCookieNameRT=newserialRT
