--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -45,12 +45,10 @@ spring.security.oauth2.client.registration.naver.client-secret=LvqAQjdQIx
 spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
 spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 spring.security.oauth2.client.registration.naver.scope=id,email
-spring.security.oauth2.client.registration.naver.client-name=Naver
-# naver: client_secret_basic(default)
-spring.security.oauth2.client.registration.naver.client-authentication-method=client_secret_basic
-
+spring.security.oauth2.client.registration.naver.client-name=naver-social-login
 
 spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
 spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+spring.security.oauth2.client.provider.naver.jwk-set-uri=https://openapi.naver.com/v1/nid/verify
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
