--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -52,3 +52,7 @@ spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oau
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.jwk-set-uri=https://openapi.naver.com/v1/nid/verify
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
+
+
+logging.level.org.springframework.security=DEBUG
+logging.level.org.springframework.security.oauth2=DEBUG
