fix: 퀴즈 조회 시 반환 정보 수정 사용자가 퀴즈를 푼 경우와 풀지 않은 경우로 나눠 응답.

--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web.filter=debug
 
 #OpenAPI
-api-key.chat-gpt=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
+api-key.chat-gpt=sk-****
 
 #App Properties
 jwtCookieNameRT=newserialRT
