수정: 메인화면 ox퀴즈 기능 수정.

--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web.filter=debug
 
 #OpenAPI
-api-key.chat-gpt=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
+api-key.chat-gpt=sk-****
 
 #App Properties
 jwtCookieNameRT=newserialRT
