fix(cors): cors 설정 수정

--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/newserial?useSSL=false&useUnic
 spring.datasource.username=root
 
 # DB password
-spring.datasource.password=991228
+spring.datasource.password=0000
 
 # true ??? JPA ??? ?? ??
 spring.jpa.show-sql=true
@@ -23,7 +23,7 @@ spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.springframework.web.filter=debug
 
 #OpenAPI
-api-key.chat-gpt=sk-****
+api-key.chat-gpt=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
 
 #App Properties
 jwtCookieNameRT=newserialRT
@@ -58,6 +58,7 @@ spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
 logging.level.org.springframework.security=DEBUG
 logging.level.org.springframework.security.oauth2=DEBUG
+#logging.level.org.hibernate=DEBUG
 
 
 #mail
@@ -69,3 +70,5 @@ spring.mail.properties.mail.smtp.auth=true
 spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
+# Cors logging level - Only for developing
+logging.level.org.springframework.web.cors.DefaultCorsProcessor=TRACE
