--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -19,6 +19,7 @@ spring.jpa.hibernate.ddl-auto=update
 # JPA? ???? Hibernate? ????? ??? SQL? ???? ????.
 spring.jpa.properties.hibernate.format_sql=true
 
+spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.MySQLDialect
 
 logging.level.org.springframework.web.filter=debug
 
