--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -73,3 +73,4 @@ spring.mail.properties.mail.smtp.starttls.enable=true
 #cookie
 server.servlet.session.cookie.secure=true
 server.servlet.session.cookie.same-site=none
+server.servlet.session.cookie.domain=teamnewserial.github.io
