fix: 쿠키 도메인 설정 제거

--- a/NewSerial/src/main/resources/application.properties
+++ b/NewSerial/src/main/resources/application.properties
@@ -71,6 +71,6 @@ spring.mail.properties.mail.smtp.timeout=5000
 spring.mail.properties.mail.smtp.starttls.enable=true
 
 #cookie
-server.servlet.session.cookie.secure=true
-server.servlet.session.cookie.same-site=none
-server.servlet.session.cookie.domain=teamnewserial.github.io
+#server.servlet.session.cookie.secure=true
+#server.servlet.session.cookie.same-site=none
+#server.servlet.session.cookie.domain=teamnewserial.github.io
